# QCSChema-Validator

./: .gitignore  README.md  main.py  pyproject.toml
.github/actions/validate/: action.yml
.github/workflows/: deploy-pages.yml  publish.yml  tests.yml
docs/source/: conf.py  design.rst  index.rst
src/qcschema_validator/: __init__.py  cli.py  parsing.py  schema_class.py  schemas.py  validate.py
tests/: known_bad.json  known_bad_atomic_input.json  known_good.json  known_good.toml  known_good.xml  known_good.yaml  known_good_atomic_input.json  subset_molecule.json  subset_molecule_missing.json  test.json  test_qcschema_validator.py
webapp/: build_schemas.py  index.html  validator.py
